unpackaged/main/default/objects/CMPL123__X123Job__c/CMPL123__X123Job__c.object-meta.xml
<CustomObject>
    <description>123 Job</description>
    <label>123 Job</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>123 Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>