unpackaged/main/default/objects/CMPL123__X123Job__c/fields/CMPL123__Child_Filter_Condition__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Child_Filter_Condition__c</fullName>
        <description>Child Filter Condition</description>
        <label>Child Filter Condition</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>