unpackaged/main/default/objects/CMPL123__X123Job__c/fields/CMPL123__Description__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Description__c</fullName>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </CustomField>