unpackaged/main/default/objects/CMPL123__X123Job__c/fields/CMPL123__Is_Active__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </CustomField>