unpackaged/main/default/objects/CMPL123__X123Job__c/fields/CMPL123__Job_External_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Job_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Job External Id</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>