unpackaged/main/default/objects/CMPL123__X123Job__c/fields/CMPL123__Job_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Job_Type__c</fullName>
        <description>Job Type</description>
        <inlineHelpText>Job Type</inlineHelpText>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Workflow Step by KeyValue</fullName>
                </value>
                <value>
                    <fullName>Set Parent Field by KeyValue</fullName>
                </value>
                <value>
                    <fullName>Set Child Field by KeyValue</fullName>
                </value>
                <value>
                    <fullName>Create Child Record by KeyValue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>