unpackaged/main/default/objects/CMPL123__X123Job__c/fields/CMPL123__Related_Task__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Related_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Task</description>
        <inlineHelpText>Related Task</inlineHelpText>
        <label>Related Task</label>
        <referenceTo>CMPL123__X123Task__c</referenceTo>
        <relationshipLabel>123 Jobs</relationshipLabel>
        <relationshipName>X123_Jobs</relationshipName>
        <type>Lookup</type>
    </CustomField>