unpackaged/main/default/objects/CMPL123__X123Job__c/fields/CMPL123__Workflow_Step__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Workflow_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Step</label>
        <referenceTo>CMPL123__WF_Step__c</referenceTo>
        <relationshipName>Intelligent_Jobs</relationshipName>
        <type>Lookup</type>
    </CustomField>