unpackaged/main/default/objects/CMPL123__X123Job__c/listViews/CMPL123__All.listView-meta.xml
<ListView>
        <fullName>CMPL123__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123__Job_Type__c</columns>
        <columns>CMPL123__Related_Task__c</columns>
        <columns>CMPL123__Workflow_Step__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>